<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.NewProduct">

    <TextView
        style="@style/bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name" />

    <EditText
        android:id="@+id/new_item_name_editText"
        style="textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="#cacce1b6"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="" />

    <TextView
        style="@style/bold"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_price" />

    <EditText
        android:id="@+id/new_item_price_editText"
        style="textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="#cacce1b6"
        android:inputType="numberDecimal" />

    <TextView
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_quantity" />

    <EditText
        android:id="@+id/new_item_quantity_editText"
        style="textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="#cacce1b6"
        android:inputType="number" />

    <TextView
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_supplier" />

    <EditText
        android:id="@+id/new_item_supplier_editText"
        style="textView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="6dp"
        android:background="#cacce1b6"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/add_image"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="@color/btn"
        android:text="@string/add_photo" />

    <Button
        android:id="@+id/add_product_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/btn"
        android:text="@string/add_product" />


</LinearLayout>
