<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context="com.example.android.inventoryapp.DetailsActivity">


    <TextView
        android:id="@+id/item_name_detail"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_name" />

    <TextView
        android:id="@+id/item_name"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/item_name_detail"
        android:gravity="center"
        android:text="Text" />

    <TextView
        android:id="@+id/item_price_detail"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_price" />

    <TextView
        android:id="@+id/item_price"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0"

        />

    <TextView
        android:id="@+id/item_quantity_detail"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_quantity" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/add" />

        <TextView
            android:id="@+id/item_quantity"
            style="@style/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/fab_add"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/remove" />
    </LinearLayout>

    <TextView
        android:id="@+id/item_supplier_detail"
        style="@style/bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/item_supplier" />

    <TextView
        android:id="@+id/item_supplier"
        style="@style/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:padding="6dp"
        android:background="@color/btn"
        android:text="@string/order_supplier" />

    <ImageView
        android:id="@+id/item_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/order_button"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"

        android:layout_weight="1"
        app:srcCompat="@mipmap/ic_launcher" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:clickable="true"
        app:fabSize="mini"
        app:srcCompat="@drawable/delete" />
</LinearLayout>